GDB-12932: Fix various problems with the batch documents loading
Fixed problem with result order. Now the returned documents from mongo will have the same order when returned via the sparql

Fixed problem with the documents limit. One more element was returned for any batch size.

Fixed problem with duplicate results. Now results would not be duplicated.

Added extended test coverage for the batch size functionality.